--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "octokit": "^4.0.2"
+    "octokit": "^4.0.2",
+    "openai": "^4.73.0",
+    "twitter-api-v2": "^1.18.2"
   }
 }
